# machine_learning_mnist_dataset_cpp_practice

./: .gitignore  README.md  add_new_model.sh  api_call.cpp  bubble_sort.cpp  classes_inheritence_abstraction_polymorphism.cpp
mnist_ml/: .gitignore  Makefile  add_new_model.sh  main  run.sh
mnist_ml/include/: data.hpp  data_handler.hpp
mnist_ml/src/: data.cc  data_handler.cc
practice/: CMakeLists.txt  api_call  api_call.cpp  bubble_sort.cpp  classes  classes.cpp  classes_inheritence_abstraction_polymorphism  json.hpp
